--- a/0705StudyBaseConsoleApp1/packages.config
+++ b/0705StudyBaseConsoleApp1/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DynamicLanguageRuntime" version="1.2.2" targetFramework="net452" />
   <package id="IronPython" version="2.7.9" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
