--- a/0705StudyBaseConsoleApp1/0705StudyBaseConsoleApp1.csproj
+++ b/0705StudyBaseConsoleApp1/0705StudyBaseConsoleApp1.csproj
@@ -66,6 +66,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -94,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RefAndOutParams.cs" />
     <Compile Include="SimpleLinqTest.cs" />
+    <Compile Include="TupleAndValueTupleTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
